Fixed issue where scorecards section couldn't scale vertically causing overlap of elements

--- a/styles/main.css
+++ b/styles/main.css
@@ -57,6 +57,7 @@ header {
   border-bottom: 5px solid var(--accent-color);
   box-sizing: border-box;
   padding: 1rem;
+  z-index: 1;
 }
 
 /**
@@ -193,6 +194,7 @@ footer {
   align-self: center;
   width: 100%;
   box-sizing: border-box;
+  white-space: nowrap;
 }
 
 .main-content {
@@ -287,7 +289,7 @@ footer {
   display: flex;
   flex-direction: column;
   margin: 1rem 2rem 1rem;
-  padding: 1rem;
+  /* padding: 1rem; */
 }
 
 .old-scorecard {
@@ -379,6 +381,10 @@ footer {
     margin: 10px 0;
   }
 
+  .container {
+    height: auto;
+  }
+
   .main-content {
     width: 100%;
     height: auto;
@@ -427,6 +433,14 @@ footer {
     bottom: 7rem;
   }
 
+  .scorecards {
+    padding-top: 0.5rem;
+  }
+
+  .new-scorecard {
+    margin-bottom: 1rem;
+  }
+
   .new-nine {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -435,9 +449,7 @@ footer {
   }
 
   .add-scorecard {
-    width: 100%;
-    margin-top: 3rem;
-    padding: 1rem;
+    width: 90%;
   }
 
   .old-scorecards {
